// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowCityComponent should display Select a country 1`] = `
<app-show-city
  __ngContext__={[Function LRootView]}
>
  <div
    class="container"
  >
    <div
      class="capital-container"
    >
      <div
        class="select-country"
      >
         Select a country 
      </div>
    </div>
  </div>
</app-show-city>
`;

exports[`ShowCityComponent should display a capital from input country value 1`] = `
<app-show-city
  __ngContext__={[Function LRootView]}
  country={[Function Object]}
>
  <div
    class="container"
  >
    <div
      class="capital-container"
    >
      <div
        class="capital-selected"
      >
        <div
          class="country-name"
        >
          <span>
             Country 
          </span>
          <span>
            Spain
          </span>
        </div>
        <div
          class="city-name"
        >
          <span>
             Capital 
          </span>
          <span>
             Madrid 
          </span>
        </div>
      </div>
    </div>
  </div>
</app-show-city>
`;
